--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <div id="app"></div>
-    <script src="./src/main.js" type="module"></script>
+    <p>hello</p>
   </body>
 </html>
