--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    <p>hello</p>
+    <div id="app"></div>
+    <script src="./src/main.js" type="module"></script>
   </body>
 </html>
